fix: add missing color to card__name element

--- a/blocks/card/card.scss
+++ b/blocks/card/card.scss
@@ -43,6 +43,8 @@
     }
     line-height: 22px;
 
+    color: $c_accent;
+
     position: relative;
 
     &::after {
